ingress.yaml
# Ingress ресурс для доступа к приложению из глобальной сети

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  namespace: cluster-ingress
  labels:
    app: web-app
    environment: production
    ingress: resource
spec:
  ingressClassName: nginx
  rules:
    - host: web-app.cloud.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app-service
                port:
                  number: 80
